# advent-of-code

./: pyproject.toml
advent_of_code/day1/: __init__.py  puzzle1.py  puzzle2.py
advent_of_code/day2/: __init__.py  puzzle1.py  puzzle2.py
advent_of_code/day3/: __init__.py  puzzle1.py  puzzle2.py
advent_of_code/day4/: __init__.py  puzzle1.py  puzzle2.py
advent_of_code/day5/: __init__.py  puzzle1.py  puzzle2.py
advent_of_code/day6/: __init__.py  day6_analysis.ods  puzzle1.py
tests/: test_advent_of_code.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
