[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Graham Tibbitts <graham.tibbitts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
intervaltree = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
